--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <button id="close-menu-btn"><i class="fa-solid fa-xmark"></i></button>
         </div>
     </nav>
+    <!--Check-->
 <!--Navigation Bar End Here-->
 <!--JavaScript Linking-->
 <script src="script.js"></script>
